This file shows a history of changes between PrBoom versions since v2.1.0.
For historical reference, the complete LxDoom changelog follows it.

Changes from v2.4.4 to v2.4.5
- -nodeh option to disable automatic loading of dehacked-in-wad lump
- Unified software and opengl engine into one binary
- Added video mode selection to menu
- Fullscreen setting will only take effect after game restart
- Mac OS X: Launcher now uses drawers instead of tabs
- Mac OS X: Fix some longstanding Wad chooser issues

Changes from v2.4.3 to v2.4.4
- Don't fail when a texture name can't be looked up
- Increased several limits - Thanks to entryway and RjY
  - Increased number of sidedef limit to 65534
  - Increased number of vertexes limit to 65535
  - Fixed crash when crossing sectors with very big height differences
- fix crash on E4M8
- New command-line options for setting a window (-window) or fullscreen
  (-nowindow) mode temporarily.
- The maximal supported resolution is increased from 1600x1200 to 2048x1536
- GLBoom will use the closest supported resolution when running fullscreen
- The "RUN" key inverts the autorun state
- Live monsters are highlighted in a different colour on the iddt-automap
- Fixed OpenGL sky rendering in Requiem and Memento Mori
- The "Show coordinates of automap pointer" setting works now
- merged many cleanups and fixes from PrBoom 2.3
- fix translucency map file handle leak
- fix consistency failures in netgames
- prevent crashes at 800x600 caused by rounding errors with naive clipping
- fixed slowdown at 1024x768 on some systems
- ability to play tasdoom demos directly
- -solo-net option is a shortcut for one-player network games
- emulate spechit overflows for dosdoom and tasdoom compatibility
- made several cleanups and fixes

Changes from v2.4.2 to v2.4.3
- Massive speed improvements in higher resolutions taken from Eternity.
  Thanks to SoM and Quasar!!!
- fix bugs in gameplay occuring with gcc-4.1