@@ -6,6 +6,7 @@ Changes from v2.4.4 to v2.4.5
 - Unified software and opengl engine into one binary
 - Added video mode selection to menu
 - Fullscreen setting will only take effect after game restart
+- reduce red palette transation if the menu is up, so the menu can still be read
 - Mac OS X: Launcher now uses drawers instead of tabs
 - Mac OS X: Fix some longstanding Wad chooser issues
 
